# sds_part2

./: .gitignore  aws-services.md
week8/virtual_realtor/: .gitignore  ENVIRONMENT_SETUP.md  ImpleentationPlan.md  app.py  pyproject.toml
week8/virtual_realtor/kb/: bedrockkb.py  stack.py  vectorstore.py
week8/virtual_realtor/kb/kbs3/: main.py
week8/virtual_realtor/kb/s3vector/: pyproject.toml
week8/virtual_realtor/tests/unit/: test_1_admin_ui_stack.py
week8/virtual_realtor/virtual_realtor/: customer_auth.py  stack.py
week8/virtual_realtor/virtual_realtor/admin/: apifn.py  cognito.py  infra.py
week8/virtual_realtor/virtual_realtor/admin/src/: TODO.md  pyproject.toml
week8/virtual_realtor/virtual_realtor/admin/src/app/: API.md  auth.py  main.py  questions.py
week8/virtual_realtor/virtual_realtor/backend/: RENTCAST_API_README.md  example_usage.py  infra.py  inspect_strands.py  test_rentcast_api.py
week8/virtual_realtor/virtual_realtor/backend/src/: pyproject.toml  requirements.txt  test_favorites.py  test_tools.py
week8/virtual_realtor/virtual_realtor/backend/src/app/: auth.py  favorites.py  main.py  tools.py  (+1 more)
week8/virtual_realtor/virtual_realtor/frontend/: .env  LOGIN_PLAN.md  TODO.md  infra.py
week8/virtual_realtor/virtual_realtor/frontend/admin/: .gitignore  package-lock.json  package.json  svelte.config.js
week8/virtual_realtor/virtual_realtor/frontend/app/: package.json  svelte.config.js
week8/virtual_realtor/virtual_realtor/frontend/chat/: .prettierignore  .prettierrc  AUTHENTICATION_SUMMARY.md  AUTH_SETUP.md  README.md  SETUP.md  package.json  svelte.config.js  vite.config.ts
week8/virtual_realtor/virtual_realtor/frontend/src/: index.html  index_new.html  index_orig.html  prompt.md
week8/virtual_realtor/virtual_realtor/rum/: infra.py
(+106 files in other folders)
