[project]
name = "virtual_realtor"
version = "0.1.0"
description = "Virtual Realator Application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aws-cdk-lib==2.206.0",
    "boto3>=1.42.30",
    "constructs>=10.0.0,<11.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest==6.2.5",
]
