[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.14",
    "fastapi>=0.116.1",
    "openai>=1.0.0",
    "strands-agents>=1.1.0",
    "strands-agents-tools>=0.2.2",
    "uvicorn>=0.35.0",
]
