[project]
name = "src"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.39.14",
    "fastapi>=0.116.1",
    "openai>=1.0.0",
    "strands-agents>=1.1.0",
    "strands-agents-tools>=0.2.2",
    "uvicorn>=0.35.0",
    "python-jose>=3.3.0",
    "requests>=2.31.0",
    "aws-cdk-lib>=2.110.0",
    "constructs>=10.0.0",
]
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
